fixed the jump on many to many autocomplete in header
#344

--- a/src/sass/header/_title.scss
+++ b/src/sass/header/_title.scss
@@ -65,9 +65,12 @@
 		// the many to many form in the header
 		.many-to-many-form {
 			z-index: 160; // this is to be on top of the breadcrumbs bar
+			top: -10px; // this aligns the box with the title
 
 			.twitter-typeahead {
-				vertical-align: top; // prevents the field from jumping after page loads
+				// these stop the box from jumping a bit after load
+				vertical-align: top;
+				display: block !important;
 			}
 
 			.form-control {
